Resolves: tdf#129021 dummy entry in multicolumn lists not working properly

Change-Id: I94afa3a29e0ce52cd8d17fab358d5737881814fa